Add friends time

--- a/examples/local/2.visual-features-extraction.ipynb
+++ b/examples/local/2.visual-features-extraction.ipynb
@@ -149,7 +149,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "61ae5d5e5f0a43ad9cd049b700d42c5d"
+       "model_id": "7a5dc2872dbc4235b42eb6e7f1cf7d59"
       }
      },
      "metadata": {}
@@ -161,7 +161,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "37daa009614542dfa8c8a8ceb53fba2f"
+       "model_id": "0f5f1043d9a3405ca1b8765a73c9a84b"
       }
      },
      "metadata": {}
@@ -172,7 +172,24 @@
      "text": [
       "Format mov,mp4,m4a,3gp,3g2,mj2 detected only with low score of 1, misdetection possible!\n",
       "moov atom not found\n",
-      "[Errno 1094995529] Invalid data found when processing input: '/home/tk/datasets/MELD/MELD.Raw/train/train_splits/dia125_utt3.mp4'; last error log: [mov,mp4,m4a,3gp,3g2,mj2] moov atom not found\n"
+      "[Errno 1094995529] Invalid data found when processing input: '/home/tk/datasets/MELD/MELD.Raw/train/train_splits/dia125_utt3.mp4'; last error log: [mov,mp4,m4a,3gp,3g2,mj2] moov atom not found\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-72686550e3a7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     24\u001b[0m             \u001b[0mto_dump\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m             \u001b[0mvidpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mVIDS_DIR\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mDATATYPE\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdiautt\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.mp4'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m             \u001b[0mcontainer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mav\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvidpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m             \u001b[0msave_full_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSAVE_AT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDATATYPE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdiautt\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.npy'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mav/container/core.pyx\u001b[0m in \u001b[0;36mav.container.core.open\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mav/container/input.pyx\u001b[0m in \u001b[0;36mav.container.input.InputContainer.__cinit__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mav/stream.pyx\u001b[0m in \u001b[0;36mav.stream.wrap_stream\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3.7/importlib/_bootstrap.py\u001b[0m in \u001b[0;36mparent\u001b[0;34m(self)\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -208,7 +225,7 @@
     "            print(e)\n",
     "            continue\n",
     "\n",
-    "        if os.path.isfile(save_full_path) and os.path.getsize(save_full_path) > 1024:\n",
+    "        if os.path.isfile(save_full_path) and os.path.getsize(save_full_path) > 512:\n",
     "            continue\n",
     "\n",
     "        for frame in container.decode(video=0):\n",
