Fix av ffmpeg frame bug

--- a/examples/local/2.visual-features-extraction.ipynb
+++ b/examples/local/2.visual-features-extraction.ipynb
@@ -228,10 +228,9 @@
     "        if os.path.isfile(save_full_path) and os.path.getsize(save_full_path) > 512:\n",
     "            continue\n",
     "\n",
-    "        for frame in container.decode(video=0):\n",
+    "        for idx, frame in enumerate(container.decode(video=0)):\n",
     "            signal.alarm(10)\n",
     "            try:\n",
-    "                idx = frame.index\n",
     "                to_dump[idx] = []\n",
     "                numpy_RGB = np.array(frame.to_image())\n",
     "                batch = numpy_RGB[np.newaxis, ...]\n",
