--- a/examples/local/3.visual-features-check.ipynb
+++ b/examples/local/3.visual-features-check.ipynb
@@ -111,8 +111,7 @@
     "print(vid_path)\n",
     "\n",
     "frames = {}\n",
-    "for frame in container.decode(video=0):\n",
-    "    idx = frame.index\n",
+    "for idx, frame in enumerate(container.decode(video=0)):\n",
     "    numpy_RGB = np.array(frame.to_image())\n",
     "    frames[idx] = numpy_RGB\n",
     "\n",
