--- a/examples/local/4.find-relevant-faces.ipynb
+++ b/examples/local/4.find-relevant-faces.ipynb
@@ -324,8 +324,7 @@
     "    assert os.path.isfile(video_path)\n",
     "\n",
     "    container = av.open(video_path)\n",
-    "    for frame in container.decode(video=0):\n",
-    "        idx = frame.index\n",
+    "    for idx, frame in enumerate(container.decode(video=0)):\n",
     "        img = np.array(frame.to_image())\n",
     "\n",
     "        if idx == frame_num:\n",
