--- a/examples/colab/2.visual-features-check-colab.ipynb
+++ b/examples/colab/2.visual-features-check-colab.ipynb
@@ -1078,8 +1078,7 @@
         "print(annot)\n",
         "\n",
         "frames = {}\n",
-        "for frame in container.decode(video=0):\n",
-        "    idx = frame.index\n",
+        "for idx, frame in enumerate(container.decode(video=0)):\n",
         "    numpy_RGB = np.array(frame.to_image())\n",
         "    frames[idx] = numpy_RGB\n",
         "\n",
