--- a/examples/local/create-embeddings.ipynb
+++ b/examples/local/create-embeddings.ipynb
@@ -793,8 +793,7 @@
     "\n",
     "    batch = []\n",
     "    print(full_video_path)\n",
-    "    for frame in container.decode(video=0):\n",
-    "        idx = frame.index\n",
+    "    for idx, frame in enumerate(container.decode(video=0)):\n",
     "        numpy_RGB = np.array(frame.to_image())\n",
     "        batch.append(numpy_RGB)\n",
     "\n",
