Add corrected visual features

--- a/examples/colab/3.find-relevant-faces-colab.ipynb
+++ b/examples/colab/3.find-relevant-faces-colab.ipynb
@@ -324,17 +324,16 @@
         "!wget https://raw.githubusercontent.com/leolani/cltl-face-all/master/examples/smaller-datasets-jsons/dataset-medium.json\n",
         "!wget https://raw.githubusercontent.com/leolani/cltl-face-all/master/examples/smaller-datasets-jsons/dataset-large.json\n",
         "\n",
-        "# !gdown --id 1U442a03S8D60ojqviwRTiZcwZ_phg6Aj\n",
-        "!gdown --id 1-2LeHC_5Cm2gWWT6vBrVhp8jorbjkN1_\n",
-        "!unzip visual-features.zip\n",
-        "!rm visual-features.zip\n",
+        "!gdown --id 1rsLbfgQYztDtrPFqEmkh-2d_0ap1qd_s\n",
+        "!unzip visual-features-smaller-dataset.zip\n",
+        "!rm visual-features-smaller-dataset.zip\n",
         "\n",
         "!gdown --id 16ck7plW9v9eSHGCs5wuB2AhhufPRt3Wi\n",
         "!unzip smaller-dataset.zip\n",
         "!rm smaller-dataset.zip\n",
         "\n",
         "!ls smaller-dataset/  |  wc -l\n",
-        "!ls visual-features | wc -l\n",
+        "!ls visual-features-smaller-dataset | wc -l\n",
         "\n",
         "import os\n",
         "from glob import glob\n",
@@ -404,7 +403,7 @@
         "            datasets[DATASIZE][DATATYPE][diautt_without_mp4] = diautt2anno[diautt_without_mp4]\n",
         "\n",
         "\n",
-        "visual_features = glob('visual-features/*.npy')\n",
+        "visual_features = glob('visual-features-smaller-dataset/*.npy')\n",
         "visual_features = {os.path.basename(vf).split('.npy')[0] : np.load(vf, allow_pickle=True).item() for vf in visual_features}\n",
         "\n",
         "with open('datasets.json', 'w', encoding='utf8') as stream:\n",
