--- a/examples/local/4.find-relevant-faces.ipynb
+++ b/examples/local/4.find-relevant-faces.ipynb
@@ -10,12 +10,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9-final"
+   "version": "3.6.9-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python37964bitdevpython378e162af75d134820b03d49898b79756f",
-   "display_name": "Python 3.7.9 64-bit ('dev-python-3.7')"
+   "name": "python3",
+   "display_name": "Python 3.6.9 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    }
+   }
   }
  },
  "nbformat": 4,
