--- a/MELD/5.dataset-stats.ipynb
+++ b/MELD/5.dataset-stats.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -146,14 +146,14 @@
   },
   {
    "source": [
-    "## Get the stats of the raw data"
+    "## Get the stats of the raw video data"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -187,14 +187,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<table>\n<tbody>\n<tr><td>DATASET</td><td>number of npys</td></tr>\n<tr><td>-------</td><td>--------------</td></tr>\n<tr><td>train  </td><td>4216          </td></tr>\n<tr><td>dev    </td><td>0             </td></tr>\n<tr><td>test   </td><td>0             </td></tr>\n</tbody>\n</table>"
+      "text/html": "<table>\n<tbody>\n<tr><td>DATASET</td><td>number of npys</td></tr>\n<tr><td>-------</td><td>--------------</td></tr>\n<tr><td>train  </td><td>4233          </td></tr>\n<tr><td>dev    </td><td>0             </td></tr>\n<tr><td>test   </td><td>0             </td></tr>\n</tbody>\n</table>"
      },
      "metadata": {}
     }
