--- a/MELD/2.visual-features-extraction.ipynb
+++ b/MELD/2.visual-features-extraction.ipynb
@@ -10,17 +10,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9-final"
+   "version": "3.7.9-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.6.9 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-    }
-   }
+   "name": "python37964bitdevpython378e162af75d134820b03d49898b79756f",
+   "display_name": "Python 3.7.9 64-bit ('dev-python-3.7')",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -35,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,17 +45,17 @@
     "import json\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
-    "SAVE_AT = \"/home/tae898/MELD-visual-features/\"\n",
+    "SAVE_AT = \"/home/tk/datasets/MELD/visual-features/MELD-visual-features/\"\n",
     "annotation_path = {}\n",
-    "annotation_path['train'] = \"/home/tae898/MELD/data/MELD/train_sent_emo.csv\" \n",
-    "annotation_path['dev'] = \"/home/tae898/MELD/data/MELD/dev_sent_emo.csv\" \n",
-    "annotation_path['test'] = \"/home/tae898/MELD/data/MELD/test_sent_emo.csv\" \n",
+    "annotation_path['train'] = \"/home/tk/datasets/MELD/data/MELD/train_sent_emo.csv\" \n",
+    "annotation_path['dev'] = \"/home/tk/MELD/data/MELD/dev_sent_emo.csv\" \n",
+    "annotation_path['test'] = \"/home/tk/MELD/data/MELD/test_sent_emo.csv\" \n",
     "\n",
     "        \n",
     "VIDS_DIR = {}\n",
-    "VIDS_DIR['train'] = \"/home/tae898/train_splits/\" \n",
-    "VIDS_DIR['dev'] = \"/home/tae898/dev_splits_complete/\" \n",
-    "VIDS_DIR['test'] = \"/home/tae898/output_repeated_splits_test/\"\n",
+    "VIDS_DIR['train'] = \"/home/tk/datasets/MELD/MELD.Raw/train/train_splits/\" \n",
+    "VIDS_DIR['dev'] = \"/home/tk/datasets/MELD/MELD.Raw/dev/dev_splits_complete/\" \n",
+    "VIDS_DIR['test'] = \"/home/tk/datasets/MELD/MELD.Raw/test/output_repeated_splits_test\"\n",
     "\n",
     "if not os.path.isfile(os.path.join(SAVE_AT, 'datasets.json')):\n",
     "    annotations = {}\n",
@@ -109,8 +105,7 @@
     "\n",
     "else:\n",
     "    with open(os.path.join(SAVE_AT, 'datasets.json'), 'r', encoding='utf8') as stream:\n",
-    "        vid2anno = json.load(stream)\n",
-    "\n"
+    "        vid2anno = json.load(stream)"
    ]
   },
   {
@@ -129,7 +124,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[*] load ckpt from /home/tae898/.local/lib/python3.6/site-packages/cltl_face_all/arcface/./pretrained_models/arc_res50/e_8_b_40000.ckpt\n"
+      "[*] load ckpt from /home/tk/.virtualenvs/dev-python-3.7/lib/python3.7/site-packages/cltl_face_all/arcface/./pretrained_models/arc_res50/e_8_b_40000.ckpt\n"
      ]
     }
    ],
@@ -138,7 +133,7 @@
     "from cltl_face_all.face_alignment import FaceDetection\n",
     "from cltl_face_all.arcface import ArcFace\n",
     "\n",
-    "fd = FaceDetection(device='cuda', face_detector='sfd')\n",
+    "fd = FaceDetection(device='cpu', face_detector='sfd')\n",
     "af = ArcFace()\n",
     "\n",
     "if not ONLY_FACE:\n",
@@ -238,7 +233,7 @@
     "\n",
     "signal.signal(signal.SIGALRM, handler) \n",
     "\n",
-    "for DATATYPE in tqdm(['train']):\n",
+    "for DATATYPE in tqdm(['train', 'dev', 'test']):\n",
     "    os.makedirs(os.path.join(SAVE_AT, DATATYPE), exist_ok=True)\n",
     "\n",
     "    for diautt, anno in tqdm(vid2anno[DATATYPE].items()):\n",
@@ -252,7 +247,7 @@
     "            print(e)\n",
     "            continue\n",
     "\n",
-    "        if os.path.isfile(save_full_path) and os.path.getsize(save_full_path) > 512:\n",
+    "        if os.path.isfile(save_full_path) and os.path.getsize(save_full_path) > 256:\n",
     "            continue\n",
     "\n",
     "        for idx, frame in enumerate(container.decode(video=0)):\n",
