--- a/MELD/5.dataset-stats.ipynb
+++ b/MELD/5.dataset-stats.ipynb
@@ -10,17 +10,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9-final"
+   "version": "3.7.9-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.6.9 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-    }
-   }
+   "name": "python37964bitdevpython378e162af75d134820b03d49898b79756f",
+   "display_name": "Python 3.7.9 64-bit ('dev-python-3.7')",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -39,18 +35,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET_JSON_PATH = \"/home/tae898/MELD-visual-features/datasets.json\"\n",
+    "DATASET_JSON_PATH = \"/home/tk/datasets/MELD/visual-features/MELD-visual-features/datasets.json\"\n",
     "VIDS_DIR = {}\n",
-    "VIDS_DIR['train'] = \"/home/tae898/train_splits/\" \n",
-    "VIDS_DIR['dev'] = \"/home/tae898/dev_splits_complete/\" \n",
-    "VIDS_DIR['test'] = \"/home/tae898/output_repeated_splits_test/\"\n",
+    "VIDS_DIR['train'] = \"/home/tk/datasets/MELD/MELD.Raw/train/train_splits/\" \n",
+    "VIDS_DIR['dev'] = \"/home/tk/datasets/MELD/MELD.Raw/dev/dev_splits_complete/\" \n",
+    "VIDS_DIR['test'] = \"/home/tk/datasets/MELD/MELD.Raw/test/output_repeated_splits_test/\"\n",
     "\n",
     "VISUAL_FEATURES_DIR = {}\n",
-    "VISUAL_FEATURES_DIR['train'] = \"/home/tae898/MELD-visual-features/train/\"\n",
-    "VISUAL_FEATURES_DIR['dev'] = \"/home/tae898/MELD-visual-features/dev/\"\n",
-    "VISUAL_FEATURES_DIR['test'] = \"/home/tae898/MELD-visual-features/test/\"\n",
+    "VISUAL_FEATURES_DIR['train'] = \"/home/tk/datasets/MELD/visual-features/MELD-visual-features/train/\"\n",
+    "VISUAL_FEATURES_DIR['dev'] = \"/home/tk/datasets/MELD/visual-features/MELD-visual-features/dev/\"\n",
+    "VISUAL_FEATURES_DIR['test'] = \"/home/tk/datasets/MELD/visual-features/MELD-visual-features/test/\"\n",
     "\n",
-    "MAIN_ACTORS = ['Chandler', 'Joey', 'Monica', 'Phoebe', 'Rachel', 'Ross']"
+    "MAIN_ACTORS = ['Chandler', 'Joey', 'Monica', 'Phoebe', 'Rachel', 'Ross']\n",
+    "\n",
+    "FACES_DIR = {}\n",
+    "FACES_DIR['train'] = \"/home/tk/datasets/MELD/visual-features/MELD-visual-features/videos/train/\"\n",
+    "FACES_DIR['dev'] = \"/home/tk/datasets/MELD/visual-features/MELD-visual-features/videos/dev/\"\n",
+    "FACES_DIR['test'] = \"/home/tk/datasets/MELD/visual-features/MELD-visual-features/videos/test/\""
    ]
   },
   {
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -187,14 +188,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<table>\n<tbody>\n<tr><td>DATASET</td><td>number of npys</td></tr>\n<tr><td>-------</td><td>--------------</td></tr>\n<tr><td>train  </td><td>4233          </td></tr>\n<tr><td>dev    </td><td>0             </td></tr>\n<tr><td>test   </td><td>0             </td></tr>\n</tbody>\n</table>"
+      "text/html": "<table>\n<tbody>\n<tr><td>DATASET</td><td>number of npys</td></tr>\n<tr><td>-------</td><td>--------------</td></tr>\n<tr><td>train  </td><td>9988          </td></tr>\n<tr><td>dev    </td><td>1108          </td></tr>\n<tr><td>test   </td><td>2610          </td></tr>\n</tbody>\n</table>"
      },
      "metadata": {}
     }
@@ -207,6 +208,38 @@
     "    npys = glob(os.path.join(VISUAL_FEATURES_DIR[DATASET], '*.npy'))\n",
     "    \n",
     "    table.append([DATASET, len(npys)])\n",
+    "display(HTML(tabulate.tabulate(table, tablefmt='html')))"
+   ]
+  },
+  {
+   "source": [
+    "## Get the stats of the extracted face videos"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<table>\n<tbody>\n<tr><td>DATASET</td><td>number of face-vids</td></tr>\n<tr><td>-------</td><td>-------------------</td></tr>\n<tr><td>train  </td><td>7523               </td></tr>\n<tr><td>dev    </td><td>861                </td></tr>\n<tr><td>test   </td><td>1983               </td></tr>\n</tbody>\n</table>"
+     },
+     "metadata": {}
+    }
+   ],
+   "source": [
+    "table = [['DATASET', 'number of face-vids']]\n",
+    "table.append('-'*len(foo) for foo in table[0])\n",
+    "\n",
+    "for DATASET in ['train', 'dev', 'test']:\n",
+    "    facevids = glob(os.path.join(FACES_DIR[DATASET], '*.mp4'))\n",
+    "\n",
+    "    table.append([DATASET, len(facevids)])\n",
     "display(HTML(tabulate.tabulate(table, tablefmt='html')))"
    ]
   }
