--- a/MELD/meld2gmrc/meld2gmrc.ipynb
+++ b/MELD/meld2gmrc/meld2gmrc.ipynb
@@ -646,27 +646,27 @@
     "                        face_candidate = None\n",
     "\n",
     "                    # if face_candidate is not None:\n",
-    "                    annotations.append(\n",
-    "                        {\n",
-    "                        'source': 'human',\n",
-    "                        'timestamp': round(time.time()*1000),\n",
-    "                        'type': 'emotion',\n",
-    "                        'value': emotion.upper()\n",
-    "                        }\n",
-    "                    )\n",
-    "\n",
     "                    # annotations.append(\n",
     "                    #     {\n",
-    "                    #         'source': 'machine',\n",
-    "                    #         'timestamp': round(time.time()*1000),\n",
-    "                    #         'type': 'person',\n",
-    "                    #         'value': \n",
-    "                    #             {'name': face_candidate,\n",
-    "                    #                 'age': age,\n",
-    "                    #                 'gender': gender,\n",
-    "                    #                 'faceprob': faceprob}\n",
+    "                    #     'source': 'human',\n",
+    "                    #     'timestamp': round(time.time()*1000),\n",
+    "                    #     'type': 'emotion',\n",
+    "                    #     'value': emotion.upper()\n",
     "                    #     }\n",
     "                    # )\n",
+    "\n",
+    "                    annotations.append(\n",
+    "                        {\n",
+    "                            'source': 'machine',\n",
+    "                            'timestamp': round(time.time()*1000),\n",
+    "                            'type': 'person',\n",
+    "                            'value': \n",
+    "                                {'name': face_candidate,\n",
+    "                                    'age': age,\n",
+    "                                    'gender': gender,\n",
+    "                                    'faceprob': faceprob}\n",
+    "                        }\n",
+    "                    )\n",
     "                    \n",
     "                    mention_id = str(uuid.uuid4())\n",
     "                    segment = [\n",
