--- a/MELD/meld2gmrc/meld2gmrc.ipynb
+++ b/MELD/meld2gmrc/meld2gmrc.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,79 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=3.0), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "a8d9e1b0229d47bebf7e848e8e0f20b2"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=9988.0), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "4535b11552194467a213eadbbd3c8b5c"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1108.0), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "125f3cb3396b4160946d83de2d94f993"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=2610.0), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "b313687cc78b4b2ebffa0db976d70a6b"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\n\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import numpy as np\n",
@@ -158,6 +88,7 @@
     "import pickle\n",
     "from datetime import datetime, timedelta\n",
     "from tqdm.notebook import tqdm\n",
+    "import random\n",
     "\n",
     "with open(ANNOTATION_PATH, 'r') as stream:\n",
     "    datasets = json.load(stream)\n",
@@ -182,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,6 +128,22 @@
     "import numpy as np\n",
     "import shutil\n",
     "import uuid\n",
+    "\n",
+    "import signal\n",
+    "from contextlib import contextmanager\n",
+    "\n",
+    "class TimeoutException(Exception): pass\n",
+    "\n",
+    "@contextmanager\n",
+    "def time_limit(seconds):\n",
+    "    def signal_handler(signum, frame):\n",
+    "        raise TimeoutException(\"Timed out!\")\n",
+    "    signal.signal(signal.SIGALRM, signal_handler)\n",
+    "    signal.alarm(seconds)\n",
+    "    try:\n",
+    "        yield\n",
+    "    finally:\n",
+    "        signal.alarm(0)\n",
     "\n",
     "\n",
     "MAIN_ACTORS = {}\n",
@@ -221,6 +168,10 @@
     "\n",
     "    return time_unix_ms\n",
     "\n",
+    "import multiprocessing\n",
+    "from joblib import Parallel, delayed\n",
+    "\n",
+    "NUM_CORES = multiprocessing.cpu_count()\n",
     "\n",
     "class Utterance():\n",
     "\n",
@@ -245,7 +196,8 @@
     "        self.image_interval = image_interval\n",
     "\n",
     "    def write_to_audio(self):\n",
-    "        !ffmpeg -i $self.video_path -q:a 0 -map a $self.audio_path -loglevel quiet\n",
+    "        # !ffmpeg -i $self.video_path -q:a 0 -map a $self.audio_path -loglevel quiet\n",
+    "        !ffmpeg -i $self.video_path -q:a 0 -map a $self.audio_path > /dev/null 2>&1 < /dev/null\n",
     "\n",
     "    def run_on_video(self, dia_dir):\n",
     "        container = av.open(self.video_path)\n",
@@ -262,7 +214,7 @@
     "            numpy_BGR = cv2.cvtColor(numpy_RGB, cv2.COLOR_RGB2BGR)\n",
     "            frame_time = idx*mspf + self.starttime\n",
     "            img_path = os.path.join(dia_dir, 'image',\n",
-    "                                    self.diautt + f'_frame{str(idx).zfill(5)}_{str(frame_time)}.jpg')\n",
+    "                                    self.diautt + f'_frame{str(idx)}_{str(frame_time)}.jpg')\n",
     "            cv2.imwrite(img_path, numpy_BGR)\n",
     "\n",
     "            features = self.visual_features[idx]\n",
@@ -344,42 +296,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=3.0), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "0ffe4ad61e37478f858f2b8e06092376"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1038.0), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "e2cb005fbe194bed9c04179b1bd2ab97"
-      }
-     },
-     "metadata": {}
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for DATASET in tqdm(['train', 'dev', 'test']):\n",
-    "    dia_diautts = list(datasets[DATASET].keys())\n",
-    "    dia_diautts = {dia: [diautt for diautt in dia_diautts if dia + '_' in diautt] \n",
-    "                    for dia in get_unique_dias(dia_diautts)}\n",
-    "\n",
+    "def run_thread(DATASET, dia_diautts):\n",
     "    for dia, diautts in tqdm(dia_diautts.items()):\n",
     "        shutil.rmtree(os.path.join(SAVE_AT, DATASET, dia), ignore_errors=True)\n",
     "        os.makedirs(os.path.join(SAVE_AT, DATASET, dia, 'image'), exist_ok=True)\n",
@@ -403,9 +326,14 @@
     "\n",
     "            chat_gmrc.append([u.speaker, u.utterance, u.starttime, u.emotion])\n",
     "\n",
-    "            u.write_to_audio()\n",
+    "\n",
+    "            try:\n",
+    "                with time_limit(15):\n",
+    "                    u.write_to_audio()\n",
+    "            except TimeoutException as e:\n",
+    "                print(f\"Timed out!: {e}\")\n",
+    "\n",
     "            u.run_on_video(dia_dir=os.path.join(SAVE_AT, DATASET, dia))\n",
-    "            # image_gmrc.append(u.frame_info)\n",
     "            for video_info in u.video_info:\n",
     "                image_gmrc.append(video_info)\n",
     "\n",
@@ -424,7 +352,29 @@
     "                stream.write('\\n')    \n",
     "\n",
     "        with open(os.path.join(SAVE_AT, DATASET, dia, 'image.json'), 'w') as stream:\n",
-    "            json.dump(image_gmrc, stream)"
+    "            json.dump(image_gmrc, stream)\n",
+    "\n",
+    "def batch_a_dict(dict_to_batch, num_batches):\n",
+    "    batch_size = len(dict_to_batch) // num_batches\n",
+    "    keys = (list(dict_to_batch.keys()))\n",
+    "    random.shuffle(keys)\n",
+    "\n",
+    "    batches = [keys[i*batch_size:(i+1)*batch_size] for i in range(num_batches)]\n",
+    "    batches[-1] = keys[batch_size*(num_batches-1):]\n",
+    "\n",
+    "    batches = [{key:dict_to_batch[key] for key in batch} for batch in batches]\n",
+    "\n",
+    "    return batches\n",
+    "\n",
+    "for DATASET in tqdm(['train', 'dev', 'test']):\n",
+    "    dia_diautts = list(datasets[DATASET].keys())\n",
+    "    dia_diautts = {dia: [diautt for diautt in dia_diautts if dia + '_' in diautt] \n",
+    "                    for dia in get_unique_dias(dia_diautts)}\n",
+    "\n",
+    "    # TODO: fix the below line.\n",
+    "    # dia_diautts = batch_a_dict(dia_diautts, NUM_CORES)\n",
+    "    \n",
+    "    run_thread(DATASET, dia_diautts)"
    ]
   }
  ]
